# pszt_proj

./: CMakeLists.txt  Model.h  ModelSzachy.cpp  ModelSzachy.h  Solver.h  SolverDFS.cpp  SolverDFS.h  SolverH.cpp  SolverH.h  State.h  StateSzachownica.cpp  StateSzachownica.h  main.cpp
SFML-2.4.1/doc/: sfml.chm
